force-app/main/default/objects/Apprentice_Work_HS__c/Apprentice_Work_HS__c.object-meta.xml
<CustomObject>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will hold all the work an apprentices completed in the course of their apprenticeship</description>
    <label>Apprentice Work HS</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Apprentice Work HS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apprentice Work HS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>