force-app/main/default/objects/Apprentice_Work_HS__c/fields/Additional_Group_Member_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Group_Member_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Group Member 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Apprentice Work HS</relationshipLabel>
    <relationshipName>Apprentice_Work_HS</relationshipName>
    <type>Lookup</type>
</CustomField>