force-app/main/default/objects/Apprentice_Work_HS__c/fields/Additional_Group_Member_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Group_Member_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Group Member 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Apprentice Work HS (Additional Group Member 2)</relationshipLabel>
    <relationshipName>Apprentice_Work_HS1</relationshipName>
    <type>Lookup</type>
</CustomField>