force-app/main/default/objects/Apprentice_Work_HS__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Field to be used by a lead to assess the work that has been completed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assessment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>