force-app/main/default/objects/Apprentice_Work_HS__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeships 2021
Purpose:  Will allow a user to select their contact record</description>
    <label>Contact</label>
    <referenceTo>Contacts_HS__c</referenceTo>
    <relationshipLabel>Apprentice Work HS</relationshipLabel>
    <relationshipName>Apprentice_Work_HS</relationshipName>
    <type>Lookup</type>
</CustomField>