force-app/main/default/objects/Apprentice_Work_HS__c/fields/Contact_HS__c.field-meta.xml
<CustomField>
    <fullName>Contact_HS__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact HS</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Apprentice Work HS (Contact HS)</relationshipLabel>
    <relationshipName>Apprentice_Work_HS2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>