force-app/main/default/objects/Apprentice_Work_HS__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Allows a user to add a description of the assignment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>