force-app/main/default/objects/Apprentice_Work_HS__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will tell a user when an assignment is due.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>