force-app/main/default/objects/Apprentice_Work_HS__c/fields/Files_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Files_Attachments__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeships 2021
Purpose: Will allow an apprentice to upload any attachments associated with their work</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Files/Attachments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>