force-app/main/default/objects/Apprentice_Work_HS__c/fields/Important_Tips_To_Remember__c.field-meta.xml
<CustomField>
    <fullName>Important_Tips_To_Remember__c</fullName>
    <description>Created By:HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will allow a user to put any tips they&apos;ve learned from the work or on how to complete said work.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Important Tips to Remember</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>