force-app/main/default/objects/Apprentice_Work_HS__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeships 2021
Purpose: Will allow a user to put down any notes from group project meetings</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>