force-app/main/default/objects/Apprentice_Work_HS__c/fields/Need_to_Present__c.field-meta.xml
<CustomField>
    <fullName>Need_to_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose: Will allow a lead to select whether an apprentice needs to present or not</description>
    <label>Need to Present</label>
    <type>Checkbox</type>
</CustomField>