force-app/main/default/objects/Apprentice_Work_HS__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will display what type of record a record is</description>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>