force-app/main/default/objects/Apprentice_Work_HS__c/fields/Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeships 2021
Purpose:  Will allow an apprentice to rate themselves on how well they understood the assignment</description>
    <label>Self Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 (Beginner or Not Started)</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 (Expert)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>