force-app/main/default/objects/Apprentice_Work_HS__c/fields/Speedbump_Blocker__c.field-meta.xml
<CustomField>
    <fullName>Speedbump_Blocker__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will allow a user to put any speedbump/blocker they have on their assignment</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Speedbump/Blocker</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>