force-app/main/default/objects/Apprentice_Work_HS__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Apprentice Work HS</relationshipLabel>
    <relationshipName>Apprentice_Work_HS</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>