force-app/main/default/objects/Apprentice_Work_HS__c/fields/Tools_Used__c.field-meta.xml
<CustomField>
    <fullName>Tools_Used__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will allow a user to show what tools they used for the apprenticeship</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tools Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>