force-app/main/default/objects/Apprentice_Work_HS__c/fields/Trailhead_Link__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Link__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will allow a user to enter in a URL for any trailhead work they&apos;ve completed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Ensure that the link to the page includes https:// prefix</inlineHelpText>
    <label>Trailhead Link</label>
    <type>Url</type>
</CustomField>