force-app/main/default/objects/Apprentice_Work_HS__c/fields/What_do_I_need__c.field-meta.xml
<CustomField>
    <fullName>What_do_I_need__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Will Allow a user to describe what help they may need</description>
    <encryptionScheme>None</encryptionScheme>
    <label>What do I need/What do I need to do?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>