force-app/main/default/objects/Apprentice_Work_HS__c/fields/What_was_Impact_on_Group__c.field-meta.xml
<CustomField>
    <fullName>What_was_Impact_on_Group__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Allows user to describe any impact their work may have had on their apprentice group</description>
    <encryptionScheme>None</encryptionScheme>
    <label>What was Impact on Group?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>