force-app/main/default/objects/Apprentice_Work_HS__c/fields/What_was_impact_on_self__c.field-meta.xml
<CustomField>
    <fullName>What_was_impact_on_self__c</fullName>
    <description>Created By: HNS
Business Unit: Salesforce Oakland Apprenticeship 2021
Purpose:  Allows user to describe the impact the work had on themselves</description>
    <encryptionScheme>None</encryptionScheme>
    <label>What was impact on self?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>