force-app/main/default/objects/Apprentice_Work_HS__c/recordTypes/Group_Work.recordType-meta.xml
<RecordType>
    <fullName>Group_Work</fullName>
    <active>true</active>
    <description>Created By: HNS, Business Unit: Salesforce Oakland Apprenticeship, Purpose:  This will create a record type for group work</description>
    <label>Group Work</label>
</RecordType>