force-app/main/default/objects/Apprentice_Work_HS__c/recordTypes/Individual_Work.recordType-meta.xml
<RecordType>
    <fullName>Individual_Work</fullName>
    <active>true</active>
    <description>Created By: HNS, Business Unit: Salesforce Oakland Apprenticeship 2021, Purpose:  Will allow a user to create individual assignment records</description>
    <label>Individual Work</label>
</RecordType>