force-app/main/default/objects/Apprentice_Work_HS__c/recordTypes/SFDC_Work.recordType-meta.xml
<RecordType>
    <fullName>SFDC_Work</fullName>
    <active>true</active>
    <description>Created By: HNS, Business Unit: Salesforce Oakland Apprenticeship, Purpose:  This will create the record type for SFDC work</description>
    <label>SFDC Work</label>
</RecordType>